--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
   bucket_path: docker-multi
   access_key_id:
     secure: "$AWS_ACCESS_KEY"
-  secure_access_key:
+  secret_access_key:
     secure: "$AWS_SECRET_KEY"
   on:
     branch: master
